Add Apostrophes to Required Fields in Donate Section
Made a single css selection to add apostrophes to all required fields, the benefit from doing it like this is that if a required field would ever be added, it would have the needed apostrophe too

--- a/donate.html
+++ b/donate.html
@@ -19,6 +19,13 @@
     <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>Donate animals: PetMe</title>
+    <style>
+      .donate-section form .relative:has(input:required) label::after {
+        content: '*';
+        color: red;
+        margin-left: 0.2rem;
+      }
+    </style>
   </head>
 
 <body>
@@ -117,7 +124,7 @@
   </header>
 
   <section class="text-gray-600 body-font relative bg-[url('Assets/Images/pet-don.jpg')] bg-center bg-no-repeat
-        bg-cover">
+        bg-cover donate-section">
     <div class="container px-5 py-24 mx-auto card backdrop-blur-sm">
       <div class="flex flex-col text-center w-full mb-12">
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">
