--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
 					<ul
 						class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
 					>
+					    <li>
+							<form id="search-form">
+								<input type="text" id="search-input" >
+								<button type="submit" class="button_search">Search</button>
+							  </form>
+							  
+							  
+						</li>
 						<li>
 							<a
 								href="./index.html"
