Added an underline effect on adopt me !!
Added an underline effect on adopt me in iindex.css

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			<div class="main-body-section-div">
 				<div class="heading-main-body">
 					<div class="main-body-heading-text">
-						<h1 class="heading-main-body-h1">Adopt Me</h1>
+						<h1 class="heading">Adopt Me</h1>
 						<div class="heading-main-body-moto">
 							Give life to an animal in need.
 						</div>
