issue:#362/ADD SCROLL BOTTOM TO TOP FEATURE IN FOOTER LOGO                                                                                                                                                                                                                                                                                                                                                         Earlier When PetMe icon is clicked at footer of the page no event occured. Fixes: add ScrollBottomtoTop function in index.js and footer-logo id in index.html

--- a/index.html
+++ b/index.html
@@ -803,6 +803,7 @@
 							class="rounded-full w-24 cursor-pointer"
 							src="./Assets/Images/logo.jpg"
 							alt="logo"
+							id = "footer-logo"
 						/>
 					</div>
 					<div>
