--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
 									<span>Delhi</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+							<a class="self-center" id="adopt-me" href="adopt.html">
+								<button type="button" class="btn" class="adopt-me">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -355,7 +355,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="btn" class="adopt-me">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -410,7 +410,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="btn" class="adopt-me">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -463,7 +463,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="btn" class="adopt-me">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -518,7 +518,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="btn" class="adopt-me">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -571,7 +571,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="btn" class="adopt-me">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -626,7 +626,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button>
+								<button type="button" class="btn" class="adopt-me">Adopt me</button>
 							</a>
 						</div>
 					</div>
@@ -679,7 +679,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button>
+								<button type="button" class="btn" class="adopt-me">Adopt me</button>
 							</a>
 						</div>
 					</div>
