--- a/index.html
+++ b/index.html
@@ -188,6 +188,14 @@
 								><img src="Assets/Images/sun.svg" width="50px" id="switch"
 							/></a>
 						</li>
+						<!-- google translate -->
+						<div id="google_translate_element">
+							<script
+							  type="text/javascript"
+							  src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+							></script>
+						  </div>
+						</div>
 					</ul>
 				</div>
 			</nav>
@@ -204,16 +212,6 @@
 				</div>
 			</div>
 
-			<!-- back to top button -->
-			<li>
-				<a href="#top">
-					<button id="bttbutton" title="backtotop">
-						<img src="Assets/Images/uparrow.png" width="20" height="25" />
-					</button>
-				</a>
-			</li>
-
-			<!--end of back to top button -->
 
 			<!-- SOS button -->
 			<div>
@@ -305,9 +303,8 @@
 									<span>Delhi</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
-							>
+							<a class="self-center pt-2" href="adopt.html">
+								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a>
 						</div>
 					</div>
 				</div>
@@ -355,7 +352,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -410,7 +407,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -463,7 +460,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -518,7 +515,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -571,7 +568,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -626,7 +623,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button>
+								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button>
 							</a>
 						</div>
 					</div>
@@ -679,7 +676,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button>
+								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button>
 							</a>
 						</div>
 					</div>
@@ -898,6 +895,16 @@
 					</div>
 				</div>
 				<!-- Social icons end -->
+
+				<!-- Scroll to top -->
+				<div class="md:pr-8">
+					<a href="#top">
+						<button id="bttbutton" title="backtotop">
+							<img src="./Assets/Images/uparrow.png" class="w-6 md:w-10"/>
+						</button>
+					</a>
+				</div>
+				<!-- Scroll to top -->
 			</div>
 
 			<div
