--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
 				<div class="flex-1 flex flex-col items-center justify-center">
 					<div class="text-2xl">Follow us on</div>
 					<div class="flex mt-2 flex-row space-x-3 my-0">
-						<div>
+						<div class="facebookIcon">
 							<a href="#" class="w-5 ml-3">
 								<!-- Facebook icon -->
 								<svg
