--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
 								</svg>
 							</a>
 						</div>
-						<div>
+						<div class="instagramIcon">
 							<a href="#" class="w-10 ml-3 mr-3">
 								<!-- Instagram icon -->
 								<svg
@@ -875,7 +875,7 @@
 								</svg>
 							</a>
 						</div>
-						<div>
+						<div class="githubIcon">
 							<a
 								href="https://github.com/akshitagupta15june/PetMe"
 								target="_blank"
