fixed: styled the adopt button on each dog card

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					<div class="main-body-heading-text">
 						<h1 class="heading-main-body-h1">Adopt Me</h1>
 						<div class="heading-main-body-moto">
-							Give life to an animal in need.
+							<h3>Give life to an animal in need.</h3>
 						</div>
 					</div>
 				</div>
@@ -306,8 +306,22 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button
+								class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-4"
 							>
+								Adopt me
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2"
+									class="w-4 h-4 ml-1"
+									viewBox="0 0 24 24"
+								>
+									<path d="M5 12h14M12 5l7 7-7 7"></path>
+								</svg>
+							</button>							</a>
 						</div>
 					</div>
 				</div>
@@ -355,8 +369,22 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button
+								class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-4"
 							>
+								Adopt me
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2"
+									class="w-4 h-4 ml-1"
+									viewBox="0 0 24 24"
+								>
+									<path d="M5 12h14M12 5l7 7-7 7"></path>
+								</svg>
+							</button>							</a>
 						</div>
 					</div>
 				</div>
@@ -410,7 +438,22 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button
+								class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-4"
+							>
+								Adopt me
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2"
+									class="w-4 h-4 ml-1"
+									viewBox="0 0 24 24"
+								>
+									<path d="M5 12h14M12 5l7 7-7 7"></path>
+								</svg>
+							</button>							</a
 							>
 						</div>
 					</div>
@@ -463,8 +506,22 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
-							>
+								<button
+								class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-4">
+								Adopt me
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2"
+									class="w-4 h-4 ml-1"
+									viewBox="0 0 24 24"
+								>
+									<path d="M5 12h14M12 5l7 7-7 7"></path>
+								</svg>
+							</button>							
+							</a>
 						</div>
 					</div>
 				</div>
@@ -518,8 +575,23 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button
+								class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-4"
 							>
+								Adopt me
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2"
+									class="w-4 h-4 ml-1"
+									viewBox="0 0 24 24"
+								>
+									<path d="M5 12h14M12 5l7 7-7 7"></path>
+								</svg>
+							</button>							
+							</a>
 						</div>
 					</div>
 				</div>
@@ -571,7 +643,23 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
+								<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-4"
+								>
+									Adopt me
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
+							</a
 							>
 						</div>
 					</div>
@@ -626,7 +714,22 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button>
+								<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-4"
+								>
+									Adopt me
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 							</a>
 						</div>
 					</div>
@@ -679,7 +782,22 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button>
+								<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-4"
+								>
+									Adopt me
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 							</a>
 						</div>
 					</div>
