Fixed the button issue #417

--- a/index.html
+++ b/index.html
@@ -305,9 +305,22 @@
 									<span>Delhi</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
-							>
+							<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 w-32 m-auto h-12 focus:outline-none text_4 font-bold rounded text-base mt-4 "
+								>
+									Contact Us
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 						</div>
 					</div>
 				</div>
@@ -354,9 +367,22 @@
 									<span>Lucknow</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
-							>
+							<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 w-32 m-auto h-12 focus:outline-none text_4 font-bold rounded text-base mt-4 "
+								>
+									Contact Us
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 						</div>
 					</div>
 				</div>
@@ -409,9 +435,22 @@
 									<span>Kashmir</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
-							>
+							<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 w-32 m-auto h-12 focus:outline-none text_4 font-bold rounded text-base mt-4 "
+								>
+									Contact Us
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 						</div>
 					</div>
 				</div>
@@ -462,9 +501,22 @@
 									<span>Karnataka</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
-							>
+							<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 w-32 m-auto h-12 focus:outline-none text_4 font-bold rounded text-base mt-4 "
+								>
+									Contact Us
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 						</div>
 					</div>
 				</div>
@@ -517,9 +569,22 @@
 									<span>Kanpur</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
-							>
+							<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 w-32 m-auto h-12 focus:outline-none text_4 font-bold rounded text-base mt-4 "
+								>
+									Contact Us
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 						</div>
 					</div>
 				</div>
@@ -570,9 +635,22 @@
 									<span>Kashmir</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button></a
-							>
+							<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 w-32 m-auto h-12 focus:outline-none text_4 font-bold rounded text-base mt-4 "
+								>
+									Contact Us
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 						</div>
 					</div>
 				</div>
@@ -625,9 +703,22 @@
 									<span>Kolkata</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button>
-							</a>
+							<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 w-32 m-auto h-12 focus:outline-none text_4 font-bold rounded text-base mt-4 "
+								>
+									Contact Us
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 						</div>
 					</div>
 				</div>
@@ -678,9 +769,22 @@
 									<span>Kashmir</span>
 								</li>
 							</ul>
-							<a class="self-center" href="adopt.html">
-								<button type="button" class="btn">Adopt me</button>
-							</a>
+							<button
+									class="inline-flex items-center bg-header-orange-light border-0 py-4 px-2 w-32 m-auto h-12 focus:outline-none text_4 font-bold rounded text-base mt-4 "
+								>
+									Contact Us
+									<svg
+										fill="none"
+										stroke="currentColor"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										class="w-4 h-4 ml-1"
+										viewBox="0 0 24 24"
+									>
+										<path d="M5 12h14M12 5l7 7-7 7"></path>
+									</svg>
+								</button>
 						</div>
 					</div>
 				</div>
