First commit in petme

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
 			<div class="main-body-section-div">
 				<div class="heading-main-body">
 					<div class="main-body-heading-text">
-						<h1 class="heading-main-body-h1">Adopt Me</h1>
-						<div class="heading-main-body-moto">
+						<h1 class="heading-main-body-h1" style="color: rgb(230, 198, 19);">Adopt Me</h1>
+						<div class="heading-main-body-moto" style="color: rgb(230, 198, 19);">
 							Give life to an animal in need.
 						</div>
 					</div>
