--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
 						</li>
 						<li>
 							<a
+								href="./Gallery.html"
+								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								>Gallery</a
+							>
+						</li>
+						<li>
+							<a
 								href="./donate.html"
 								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>Donate</a
