--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<link rel="stylesheet" href="./mobileView.css" />
 	
 		<link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
+		<link rel="icon" href="Assets/Images/happy.png">
+		
 		<script
 			defer
 			src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"
