--- a/adopt.html
+++ b/adopt.html
@@ -145,9 +145,10 @@
         </label>
         <input type="phone"  name="tel" id="tel" class="form-control" placeholder="+91 1023456789" oninput="this.value = this.value.replace(/[^0-9\+\.]/g, '').replace(/(\..*)\./g, '$1');"/>
       </div>
-
-      <div class="form-group">
-        <button class="block w-full h-min text-center bg-green-500 my-px p-3 rounded" type="submit">Submit</button>
+      <div class="flex justify-center">
+        <div class="form-group">
+          <button class="bg-green-500 hover:bg-green-700 text-center py-3 px-12 rounded-full">Submit</button>
+        </div>
       </div>
     </div>
     </form>
