improved the interface of submit button in sos report

--- a/reportstary.html
+++ b/reportstary.html
@@ -198,10 +198,13 @@
           placeholder="Enter your comment here..."></textarea>
       </div>
 
-      <div class="form-group text-white">
-        <button type="submit" id="submit"
-          class="block w-full h-min text-center bg-green-500 hover:bg-green-600 my-px p-3 rounded">Submit</button>
+      <div class="flex justify-center">
+        <div class="form-group text-white">
+          <button type="submit" id="submit"
+            class="bg-green-500 hover:bg-green-600 text-center py-3 px-12 rounded-full">Submit</button>
+        </div>
       </div>
+      
 
     </form>
   </div>
