--- a/index.html
+++ b/index.html
@@ -796,11 +796,13 @@
 					class="flex flex-1 flex-col text-center sm:flex-row items-center justify-center space-x-3"
 				>
 					<div>
-						<img
+						<a href="#top">
+							<img
 							class="rounded-full w-24 cursor-pointer"
 							src="./Assets/Images/logo.jpg"
 							alt="logo"
-						/>
+							/>
+						</a>
 					</div>
 					<div>
 						<div class="space-y-2">
