Added donate in navbar

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<a
 								href="./donate.html"
 								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-								>Donate</a
+								>Rehome Pet</a
 							>
 						</li>
 						<li>
@@ -152,6 +152,11 @@
 										class="block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
 										>Become a Volunteer</a
 									>
+									<a
+										href="money.html"
+										class="block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
+										>Donate</a
+									>	
 								</div>
 							</div>
 						</li>
