--- a/volunteer.html
+++ b/volunteer.html
@@ -92,6 +92,8 @@
                                     class=" block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become
                                     a Volunteer</a>
 
+                                <a href="money.html"
+                                    class=" block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Donate</a>
                             </div>
                         </div>
                     </li>
