--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<nav class="">
 				<div class="hidden w-full lg:block z-2" id="navbar">
 					<ul
-						class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
+						class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center" style="font-size:.9rem;"
 					>
 						<li>
 							<a
