Added favicon to blogs

--- a/blogs/disha.html
+++ b/blogs/disha.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" referrerpolicy="no-referrer" >
     <link rel="stylesheet" href="./blog.css">
     <title>Blog: Disha</title>
@@ -21,13 +22,21 @@
         </div>
     </header>
 
-    <div class=" w-[32rem]  xl:w-[117rem] my-0 mx-0 xl:mx-auto">
-        <div class="w-[360px] xl:w-[114rem] h-[25rem] xl:h-[40rem] my-[5rem] xl:mx-auto bg-[url('./img/b4-poster.png')] bg-no-repeat bg-cover snap-center rounded-xl">
+    <!-- <div class=" w-[32rem]  xl:w-[117rem] my-0 mx-0 xl:mx-auto"> -->
+      <div class="flex-column justify-between items-center my-[3rem] mx-[0rem]">
+      <div class="d-flex justify-content-center">
+        <img src="./img/b4-poster.png" alt="Cute Animal Pictures" class="imageClass">
+        <!-- <div class="w-[360px] xl:w-[114rem] h-[25rem] xl:h-[40rem] my-[5rem] xl:mx-auto bg-[url('./img/b4-poster.png')] bg-no-repeat bg-cover snap-center rounded-xl imageClass">
 
-        </div>
-
-        <main class="w-full bg-white p-5 xl:p-12 rounded-lg -mt-56 items-center my-0 mx-[20px] xl:mx-auto xl:w-[80rem]">
-            <h2 class="text-3xl xl:text-5xl font-semibold uppercase tracking-wider">KEEPING DOGS HAPPY</h2>
+        </div> -->
+      </div>
+        
+        <div class="mt-40px">
+        <!-- <main class="w-full bg-white p-5 xl:p-12 rounded-lg -mt-56 items-center my-0 mx-[20px] xl:mx-auto xl:w-[80rem]"> -->
+          <main class="w-full bg-white p-5 xl:p-12 rounded-lg mt-0 items-center my-0 mx-[1rem] xl:mx-auto xl:w-[90vw]">
+          <div>
+            <div>
+                <h1 class="text-3xl xl:text-5xl font-semibold uppercase tracking-wider text-center">KEEPING DOGS HAPPY</h1>
             <div class="flex justify-between items-center my-[3rem] mx-0">
                 <div class="flex justify-between items-center">
                     <div class="w-24 h-24">
@@ -43,7 +52,8 @@
                     </div>
                 </div>
             </div>
-            <div class="content">
+            </div>
+            <div class="content desc">
                 <p class="text-[#5b5963] my-[1rem] mx-0 text-xl">Dogs are great pets, wonderful companions and show you love no matter what! It isn’t really hard to keep your dog happy.
 
                 </p>
@@ -108,8 +118,9 @@
                 </p>
 
             </div>
-
+          </div>
         </main>
+      </div>
 
     </div>
 
