--- a/blogs/shelby.html
+++ b/blogs/shelby.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" referrerpolicy="no-referrer" >
     <link rel="stylesheet" href="./blog.css">
     <title>Blog: Shelby</title>
@@ -27,7 +28,7 @@
 
         </div>
 
-        <main class="w-full bg-white p-5 xl:p-12 rounded-lg -mt-56 items-center my-0 mx-[20px] xl:mx-auto xl:w-[80rem]">
+        <main class="w-full bg-white p-5 xl:p-12 rounded-lg mt-0 items-center my-0 mx-[20px] xl:mx-auto xl:w-[80rem]">
             <h2 class="text-3xl xl:text-5xl font-semibold uppercase tracking-wider">The best pet is a guinea pig</h2>
             <div class="flex justify-between items-center my-[3rem] mx-0">
                 <div class="flex justify-between items-center">
