--- a/blogs/dan.html
+++ b/blogs/dan.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" referrerpolicy="no-referrer" >
     <link rel="stylesheet" href="./blog.css">
     <title>Blog: Dan</title>
@@ -24,11 +25,11 @@
 
     <div class=" w-[32rem]  xl:w-[117rem] my-0 mx-0 xl:mx-auto">
         <div class="w-[360px] xl:w-[114rem] h-[25rem] xl:h-[40rem] my-[5rem] xl:mx-auto bg-[url('./img/b1-poster.png')] bg-no-repeat bg-cover snap-center rounded-xl">
-
+          <!-- <img src="./img/b1-poster.png" alt="Cute Animals" class="imageClass"> -->
         </div>
 
-        <main class="w-full bg-white p-5 xl:p-12 rounded-lg -mt-56 items-center my-0 mx-[20px] xl:mx-auto xl:w-[80rem]">
-            <h2 class="text-3xl xl:text-5xl font-semibold uppercase tracking-wider">Adopting A Chihuahua/Beagle Mix</h2>
+        <main class="w-full bg-white p-5 xl:p-12 rounded-lg mt-0 items-center my-0 mx-0 xl:mx-auto xl:w-[90vw]">
+            <h2 class="text-3xl xl:text-5xl font-semibold uppercase tracking-wider text-center">Adopting A Chihuahua/Beagle Mix</h2>
             <div class="flex justify-between items-center my-[3rem] mx-0">
                 <div class="flex justify-between items-center">
                     <div class="w-24 h-24">
