--- a/index.html
+++ b/index.html
@@ -184,9 +184,10 @@
 							</a>
 						</li>
 						<li>
-							<a id="theme-toggle"
-								><img src="Assets/Images/sun.svg" width="50px" id="switch"
-							/></a>
+							<a id="theme-toggle">
+
+							<img src="Assets/Images/sun.svg" width="50px" id="switch"/>
+							</a>
 						</li>
 						<!-- google translate -->
 						<div id="google_translate_element">
@@ -304,7 +305,7 @@
 								</li>
 							</ul>
 							<a class="self-center pt-2" href="adopt.html">
-								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a>
+								<button type="button" class="hover-button">Adopt me</button></a>
 						</div>
 					</div>
 				</div>
@@ -352,7 +353,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
+								<button type="button" class="hover-button">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -407,7 +408,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
+								<button type="button" class="hover-button">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -460,8 +461,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
-							>
+								<button type="button" class="hover-button">Adopt me</button></a>
 						</div>
 					</div>
 				</div>
@@ -515,7 +515,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
+								<button type="button" class="hover-button">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -568,7 +568,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button></a
+								<button type="button" class="hover-button">Adopt me</button></a
 							>
 						</div>
 					</div>
@@ -623,7 +623,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button>
+								<button type="button" class="hover-button">Adopt me</button>
 							</a>
 						</div>
 					</div>
@@ -676,7 +676,7 @@
 								</li>
 							</ul>
 							<a class="self-center" href="adopt.html">
-								<button type="button" class="px-6 py-2 rounded-lg bg-yellow-500 text-white font-bold">Adopt me</button>
+								<button type="button" class="hover-button">Adopt me</button>
 							</a>
 						</div>
 					</div>
